--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^20.14.2",
     "@types/three": "^0.165.0",
+    "mapbox-gl": "^3.5.1",
     "three": "^0.165.0",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
